# copier-python

./: .coverage  .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  Taskfile.yml  cookiecutter.json  copier.yml  devtools  docker-compose.yaml  link-project  pyproject.toml  setup.cfg
_pkg_files/basic/cli/: __init__.py  sub.py
_pkg_files/minimal/: cli.py
_scripts/: task_post_generation.py
examples/example.project/: README.md  Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
examples/example.project.basic/: README.md  Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
examples/example.project.basic/tests/: test_something.py
examples/example.project.everything/: README.md  Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
examples/example.project.everything/src/example/project/everything/: cli.py
examples/example.project.everything/tests/: test_something.py
examples/example.project.minimal/: README.md  Taskfile.yml  cookiecutter-input.yaml  pyproject.toml
examples/example.project.minimal/devtools/: Dockerfile
examples/example.project.minimal/src/example/project/minimal/: cli.py
examples/example.project.minimal/tests/: test_something.py
examples/example.project/src/example/project/: cli.py
examples/example.project/tests/: test_something.py
hooks/: post_gen_project.py  pre_gen_project.py
template/: .editorconfig  README.md  Taskfile.yml  pyproject.toml  requirements-boot.in  {% if build_tool == "gnu-make" %}Makefile{% endif %}  {% if build_tool == "go-task" %}Taskfile.yml{% endif %}  {{ _copier_conf.answers_file }}.conf
template/.scripts/: task_post_generation.py
template/_scripts/: task_post_generation.py
template/devtools/: Makefile  requirements.in
template/pkg_files/basic/: cli.py
template/pkg_files/minimal_typer/: cli.py
template/tests/: test_something.py
template/{% if use_oci_devtools %}devtools{% endif %}/: Dockerfile
test/data/cookie-config/: basic.yaml
tests/: test_bake.py  test_copy.py
tests/data/cookie-config/: basic-make.yaml  basic.yaml  defaults.yaml  everything.yaml  minimal.yaml
tests/data/copier-ansers/: minimal.yaml
tests/data/copier-answers/: basic.yaml  defaults.yaml  minimal.yaml  minimal_typer.yaml  poe_minimal.yaml
{{cookiecutter.project_dirname}}/: Makefile  README.md  Taskfile.yml  pyproject.toml  requirements-boot.in  setup.cfg
{{cookiecutter.project_dirname}}/devtools/: Dockerfile  Makefile
{{cookiecutter.project_dirname}}/pkg_files/: __init__.py  cli.py
{{cookiecutter.project_dirname}}/pkg_files/basic/: cli.py
{{cookiecutter.project_dirname}}/tests/: test_something.py
